load("@//libs/bzl/build_test:build_test.bzl", "build_test")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "environment_lib",
    srcs = ["environment.go"],
    importpath = "sge-monorepo/environment",
    visibility = ["//visibility:private"],
    deps = [
        "//environment/envinstall",
        "//libs/go/p4lib",
    ],
)

go_binary(
    name = "environment",
    embed = [":environment_lib"],
    visibility = ["//visibility:public"],
)
