load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_embed_data", "go_library")

go_embed_data(
    name = "embedded",
    srcs = glob([
        "*.css",
        "*.ico",
        "*.png",
    ]) + ["//tools/ebert/pages"],
    flatten = True,
    package = "main",
    var = "EmbeddedData",
)

go_binary(
    name = "ebert",
    embed = [":ebert_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "ebert_lib",
    srcs = [
        "ebert.go",
        "ebert_linux.go",
        "ebert_windows.go",
        "webui.go",
    ],
    embedsrcs = glob([
        "*.css",
        "*.ico",
        "*.png",
    ]),
    importpath = "sge-monorepo/tools/ebert",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/go/log",
        "//libs/go/log/cloudlog",
        "//libs/go/p4lib",
        "//tools/ebert/ebert",
        "//tools/ebert/flags",
        "//tools/ebert/handlers",
        "//tools/ebert/handlers/browse",
        "//tools/ebert/handlers/comments",
        "//tools/ebert/handlers/dashboard",
        "//tools/ebert/handlers/files",
        "//tools/ebert/handlers/project",
        "//tools/ebert/handlers/review",
        "//tools/ebert/handlers/trigger",
        "//tools/ebert/watcher",
        "@io_opencensus_go//plugin/ochttp",
        "@io_opencensus_go//stats/view",
        "@io_opencensus_go//trace",
        "@io_opencensus_go//zpages",
        "@io_opencensus_go_contrib_exporter_stackdriver//:stackdriver",
        "@org_golang_google_api//compute/v1:compute",
        "@org_golang_x_oauth2//google",
    ],
)
