load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "historian_lib",
    srcs = ["historian.go"],
    importpath = "sge-monorepo/tools/historian",
    visibility = ["//visibility:private"],
    deps = ["//libs/go/p4lib"],
)

go_binary(
    name = "historian",
    embed = [":historian_lib"],
    visibility = ["//visibility:public"],
)
