load("//libs/bzl/build_test:build_test.bzl", "build_test")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_embed_data", "go_library")

config_setting(
    name = "opt",
    values = {"compilation_mode": "opt"},
)

go_embed_data(
    name = "fonts",
    srcs = [
        "GoogleSans-Regular.ttf",
    ],
    flatten = True,
    package = "main",
    var = "FontData",
)

go_binary(
    name = "launcher",
    embed = [":launcher_lib"],
    gc_linkopts = select({
        ":opt": ["-H=windowsgui"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

go_library(
    name = "launcher_lib",
    srcs = [
        "launcher.go",
        ":fonts",  # keep
    ],
    importpath = "sge-monorepo/tools/launcher",
    visibility = ["//visibility:private"],
    deps = [
        "//build/cicd/monorepo",
        "//libs/go/files",
        "@com_github_allendang_giu//:giu",
        "@com_github_allendang_giu//imgui",
        "@com_github_golang_glog//:glog",
    ],
)
