load("//libs/bzl/build_test:build_test.bzl", "build_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "files",
    srcs = ["files.go"],
    importpath = "sge-monorepo/libs/go/files",
    visibility = ["//visibility:public"],
)

build_test(
    name = "files_build_test",
    targets = [":files"],
)
