load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = ["log.go"],
    importpath = "sge-monorepo/libs/go/log",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_glog//:glog"],
)

go_test(
    name = "log_test",
    srcs = ["log_test.go"],
    embed = [":log"],
    deps = [
        "@com_github_google_go_cmp//cmp",
    ],
)
