load("//libs/bzl/build_test:build_test.bzl", "build_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sgeflag",
    srcs = ["sgeflag.go"],
    importpath = "sge-monorepo/libs/go/sgeflag",
    visibility = ["//visibility:public"],
)

build_test(
    name = "sgeflag_build_test",
    targets = [":sgeflag"],
)
