load("//libs/bzl/build_test:build_test.bzl", "build_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "zip_utils",
    srcs = ["zip_utils.go"],
    importpath = "sge-monorepo/libs/go/zip_utils",
    visibility = ["//visibility:public"],
)

build_test(
    name = "zip_utils_build_test",
    targets = [":zip_utils"],
)
