load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "file_stats",
    embed = [":file_stats_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "file_stats_lib",
    srcs = ["file_stats.go"],
    importpath = "sge-monorepo/tools/file_stats",
    visibility = ["//visibility:private"],
)
