load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "benchmark_proto",
    srcs = [
        "benchmark.proto",
    ],
    visibility = ["//visibility:private"],
)

go_proto_library(
    name = "benchmark_go_proto",
    importpath = "sge-monorepo/tools/p4_benchmark/protos/benchmarkpb",
    proto = ":benchmark_proto",
    visibility = [
        "//tools/p4_benchmark:__subpackages__",
    ],
)
