load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "monitoring",
    srcs = ["monitoring.go"],
    importpath = "sge-monorepo/libs/go/cloud/monitoring",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go//compute/metadata",
        "@com_google_cloud_go//monitoring/apiv3",
        "@go_googleapis//google/api:metric_go_proto",
        "@go_googleapis//google/api:monitoredres_go_proto",
        "@go_googleapis//google/monitoring/v3:monitoring_go_proto",
        "@org_golang_google_api//iterator",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
