load("//libs/bzl/build_test:build_test.bzl", "build_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "secretmanager",
    srcs = ["secretmanager.go"],
    importpath = "sge-monorepo/libs/go/cloud/secretmanager",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go//secretmanager/apiv1",
        "@go_googleapis//google/cloud/secretmanager/v1:secretmanager_go_proto",
    ],
)

build_test(
    name = "secretmanager_build_test",
    targets = [":secretmanager"],
)
